<resources>
    <string name="app_name">Coffee Addicts</string>
    <string name="coffee_addicts">Coffee Addicts</string>
    <string name="address">Regele Ferdinand 13, Cluj-Napoca 400110</string>
    <string name="phone_number">0744 937 340</string>
    <string name="facebook_page">www.facebook.com/CoffeeAddictsToGo</string>
    <string name="description">Coffee Addicts is the place where coffee lovers and addicts are understood and always welcome!</string>
    <string name="slogan">"'cause nothing else truly matters when you wake up"</string>
    <string name="working_hours">Whether you want to recharge your batteries or just enjoy a good cup of coffee, our baristas are happy to guide you to the perfect combination of flavours. Feel free to drop by:</string>
    <string name="working_hours_2">Monday to Friday from 07:30 a.m. to 6:30 p.m.
        \nSaturday from 9 a.m. to 3 p.m.
        \nSunday from 10 a.m. to 4 p.m.</string>
</resources>
